crates/tapir-script/compiler/src/snapshots/compiler__grammar_test__snapshot_failures@non_associative_comparison.tapir.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/non_associative_comparison.tapir
---
Error: Unexpected token OperatorEqEq, expected one of then, ";", "+", "-", "||", "&&"
   ╭─[ non_associative_comparison.tapir:1:16 ]
   │
 1 │ var x = 3 == 5 == true;
   │                ─┬  
   │                 ╰── Unexpected token
───╯
